--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/Saidgarnit/File-Encryption-Tool" target="_blank">
+                        <a class="nav-link" href="https://github.com/Saidgarnit/file-encryption-tool.git" target="_blank">
                             <i class="bi bi-github"></i> GitHub
                         </a>
                     </li>
@@ -222,7 +222,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <p class="mb-0 text-md-end">Developed by <a href="https://github.com/Saidgarnit" target="_blank">Saidgarnit</a> | <a href="https://github.com/Saidgarnit/File-Encryption-Tool" target="_blank">View on GitHub</a></p>
+                    <p class="mb-0 text-md-end">Developed by <a href="https://github.com/Saidgarnit" target="_blank">Saidgarnit</a> | <a href="https://github.com/Saidgarnit/file-encryption-tool.git" target="_blank">View on GitHub</a></p>
                 </div>
             </div>
         </div>
